@@ -1,0 +1,256 @@
+#textdomain wesnoth-lib
+###
+### Definition of the window to control gamestate inspector.
+###
+
+[window]
+    id = "gamestate_inspector"
+    description = "Gamestate inspector dialog."
+
+    [resolution]
+        definition = "default"
+        automatic_placement = "true"
+        vertical_placement = "top"
+        horizontal_placement = "left"
+
+        [linked_group]
+            id = "name"
+            fixed_width = "true"
+        [/linked_group]
+
+        [grid]
+            [row] #header
+                grow_factor = 0
+
+                [column]
+                    grow_factor = 7
+                    border = "all"
+                    border_size = 5
+                    horizontal_alignment = "left"
+
+                    [label]
+                        definition = "title"
+                        label = _ "Gamestate Inspector"
+                    [/label]
+                [/column]
+
+                [column]
+                    grow_factor = 0
+                    [spacer]
+                        definition = "default"
+                    [/spacer]
+                [/column]
+            [/row]
+
+            [row] #menu
+                grow_factor = 0
+
+                [column]
+                    grow_factor = 7
+                    border = "all"
+                    border_size = 5
+                    horizontal_alignment = "left"
+
+                    [label]
+                        id="inspector_name"
+                        definition = "default"
+                        label= ""
+                    [/label]
+                [/column]
+
+                [column]
+                    grow_factor = 0
+                    border = "all"
+                    border_size = 5
+                    horizontal_alignment = "left"
+                    [spacer]
+                        definition = "default"
+                    [/spacer]
+                [/column]
+            [/row]
+
+            [row] #stack-title
+                grow_factor = 4
+
+                [column]
+                    grow_factor = 7
+                    [grid]
+                        [row]
+                            [column]
+                                grow_factor = 3
+                                border = "all"
+                                border_size = 5
+                                horizontal_alignment = "left"
+                                [label]
+                                    definition = "default"
+                                    label= _ "Content"
+                                [/label]
+                            [/column]
+
+                            [column]
+                                grow_factor = 4
+                                border = "all"
+                                border_size = 5
+                                horizontal_alignment = "left"
+                                [label]
+                                    definition = "default"
+                                    label= _ "Inspection window"
+                                [/label]
+                            [/column]
+                        [/row]
+                        [row]
+                            [column]
+                                grow_factor = 3
+                                border = "all"
+                                border_size = 5
+                                vertical_alignment = "top"
+                                horizontal_alignment = "left"
+
+                                [listbox]
+                                    id = "stuff_list"
+                                    definition = "default"
+                                    [header]
+                                        [row]
+                                            [column]
+                                                grow_factor = 1
+                                                horizontal_grow = "true"
+                                                border = "all"
+                                                border_size = 5
+
+                                                [label]
+                                                    id = "name"
+                                                    definition = "default"
+                                                    linked_group = "name"
+
+                                                    label = _ "Variable"
+                                                [/label]
+                                            [/column]
+                                        [/row]
+                                    [/header]
+
+                                    [list_definition]
+                                        [row]
+                                            [column]
+                                                vertical_grow = "true"
+                                                horizontal_grow = "true"
+
+                                                [toggle_panel]
+                                                    definition = "default"
+                                                    [grid]
+                                                        [row]
+                                                            [column]
+                                                                grow_factor = 1
+                                                                horizontal_grow = "true"
+
+                                                                border = "all"
+                                                                border_size = 5
+
+                                                                [label]
+                                                                    id = "name"
+                                                                    definition = "default"
+                                                                    linked_group = "name"
+                                                                [/label]
+                                                            [/column]
+                                                        [/row]
+                                                    [/grid]
+                                                [/toggle_panel]
+                                            [/column]
+                                        [/row]
+                                    [/list_definition]
+                                [/listbox]
+                            [/column]
+
+                            [column]
+                                grow_factor = 4
+                                border = "all"
+                                border_size = 5
+                                vertical_alignment = "top"
+                                horizontal_alignment = "left"
+                                [scroll_label]
+                                    id = "inspect"
+                                    definition = "default"
+                                [/scroll_label]
+                            [/column]
+                        [/row]
+                    [/grid]
+                [/column]
+
+                [column]
+                    grow_factor = 0
+                    horizontal_alignment="center"
+                    vertical_alignment = "top"
+                    [grid]
+                        [row]
+                            [column]
+                    [label]
+                        definition = "default"
+                        label = _ "Actions"
+                    [/label]
+                            [/column]
+                        [/row]
+
+#                        [row]
+#                            [column]
+#                                [button]
+#                    grow_factor = 0
+#                    horizontal_alignment="center"
+#                    vertical_alignment = "top"
+#                                    id = "add_variable"
+#                                    definition = "default"
+#                                    label = _ "Add variable"
+#                                [/button]
+#                            [/column]
+#                        [/row]
+#                        [row]
+#                            [column]
+#                                [button]
+#                    grow_factor = 0
+#                    horizontal_alignment="center"
+#                    vertical_alignment = "top"
+#                                    id = "modify_variable"
+#                                    definition = "default"
+#                                    label = _ "Modify variable"
+#                                [/button]
+#                            [/column]
+#                        [/row]
+#                        [row]
+#                            [column]
+#                                [button]
+#                    grow_factor = 0
+#                    horizontal_alignment="center"
+#                    vertical_alignment = "top"
+#                                    id = "delete_variable"
+#                                    definition = "default"
+#                                    label = _ "Delete variable"
+#                                [/button]
+#                            [/column]
+#                        [/row]
+                    [/grid]
+                [/column]
+            [/row]
+
+            [row] #status
+                grow_factor = 0
+
+                [column]
+                    grow_factor = 7
+                    border = "all"
+                    border_size = 5
+                    horizontal_alignment = "left"
+                    [spacer]
+                        definition = "default"
+                    [/spacer]
+                [/column]
+
+                [column]
+                    grow_factor = 0
+                    [button]
+                        id = "cancel"
+                        definition = "default"
+                        label = _ "Close"
+                    [/button]
+                [/column]
+            [/row]
+        [/grid]
+    [/resolution]
+[/window]
