@@ -8,6 +8,9 @@ Version 1.7.5+svn:
    * Added a couple of missing frames for the Inferno Drake
  * Language and i18n:
    * Updated translations: Estonian, Spanish.
+ * User interface:
+   * new gamestate inspector debug dialog (via 'inspect' command 
+     and '[inspect]' tag)
  * WML engine:
    * Fix silent=yes for objectives
  * Miscellaneous and bugfixes:
